Fixed form spacing and added form spree

--- a/css/main.css
+++ b/css/main.css
@@ -91,9 +91,8 @@ footer p, footer a{
 }
 
 .border{
-	border-left: 1px solid white;
-	border-right: 1px solid white;
-	height: 35em;
+	border:1px solid white;
+	border-radius: 3px;
 }
 .btn-style {
 	background-color: #ef4130;
@@ -169,9 +168,13 @@ label {
 		margin-left: 1.5rem;
 	}
 
-	header, main {
+	.max-width {
 		margin-left: 10%;
 		margin-right: 10%;
+	}
+
+	.no-max-width {
+		margin: 0;
 	}
 
 }
